# geographiclib-jni

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  notes.txt  test_java_jni.sh
include/GeographicLib/jni/: net_sf_geographiclib_Geodesic.h
java/: .gitignore  build.properties  build.xml
java/src/net/sf/geographiclib/: Geodesic.java  LibraryLoader.java  Test.java
src/: net_sf_geographiclib_Geodesic.cpp
